# my_learn_opengl_demo

./: CMakeLists.txt
src/: Test1.cpp  Test1.h  Test2.cpp  Test2.h  glad.c  main.cpp
src/arrays/: VertexArray.cpp  VertexArray.h
src/constants/: Constants.cpp  Constants.h  GlobalsDefine.h
src/geometry/: Point.cpp  Point.h  Polyline.cpp  Polyline.h
src/helper/: ColorHelper.h  LoggerConfig.h  VaryTools.cpp  VaryTools.h
src/include/matrixUtil/: CCData.cpp  CCData.h  CCImage.cpp  CCImage.h  CCMathBase.h  Mat4.cpp  Mat4.h  Mat4.inl  MathUtil.cpp  MatrixState.cpp  MatrixState.h  Quaternion.cpp  Quaternion.h  Vec2.cpp  Vec2.h  Vec2.inl  Vec3.cpp  Vec3.h  Vec3.inl  Vec4.cpp  Vec4.h  Vec4.inl
src/object/: TestFunction.cpp  TestFunction.h
src/object/object2d/: ObjPoint.cpp  ObjPoint.h  Object2d.h
src/object/object3d/: Obj3dCoordinateLines.cpp  Obj3dCoordinateLines.h  Obj3dPoint.cpp  Obj3dPoint.h  Obj3dPolyLine.cpp  Obj3dPolyLine.h  Obj3dTriangle.cpp  Obj3dTriangle.h  Object3d.h  Point.cpp  Point.h
src/object/object3d/test/: Obj3dTriangle.cpp  Obj3dTriangle.h
src/program/: ColorShaderProgram.cpp  ColorShaderProgram.h  ShaderHelper.cpp  ShaderHelper.h  ShaderProgram.cpp  ShaderProgram.h  TextureShaderProgram.cpp  TextureShaderProgram.h
